# clanker-wallet

./: .gitignore  LICENSE  README.md  SKILL.md  llms-full.txt  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
examples/: langchain-tool.ts  scheduled-task.ts  simple-transfer.ts  uniswap-swap.ts  vercel-ai-tool.ts
python/: README.md  pyproject.toml
python/clanker_wallet/: __init__.py  client.py  crypto.py  errors.py  types.py
python/tests/: test_client.py  test_crypto.py
src/: client.test.ts  client.ts  crypto.ts  events.ts  index.ts  types.ts
